Appending objects with shape keys into new file is broken. #91834

Closed
opened 2021-09-30 11:17:39 +02:00 by Denis Belov · 11 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 466.63

Blender Version
Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-09-14 23:13, hash: e6fa74ffed and later
Worked: blender-3.0.0-alpha+master.b5a1c194c5dd-windows.amd64-release
Caused by 3be5ce4aad

Short description of error
After appending object with shape keys you can't do anithing with them (editing/deleting). Saving file with appended object and reopening it there is no shape keys at all. Opening-saving original file works as expected.

Exact steps for others to reproduce the error

  • Try to append cube from this file
  • Try to move the keyframes in timeline or attempt to delete them

Test File:
shape.blend

test_1.mp4

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 466.63 **Blender Version** Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-09-14 23:13, hash: `e6fa74ffed` and later Worked: blender-3.0.0-alpha+master.`b5a1c194c5dd`-windows.amd64-release Caused by 3be5ce4aad **Short description of error** After appending object with shape keys you can't do anithing with them (editing/deleting). Saving file with appended object and reopening it there is no shape keys at all. Opening-saving original file works as expected. **Exact steps for others to reproduce the error** - Try to append cube from this file - Try to move the keyframes in timeline or attempt to delete them Test File: [shape.blend](https://archive.blender.org/developer/F10688718/shape.blend) [test_1.mp4](https://archive.blender.org/developer/F10689976/test_1.mp4)
Author

Added subscriber: @DenisBelov

Added subscriber: @DenisBelov
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Hi, thanks for the report. I am not able to reproduce this on current master and a little older builds (15405685d9, e6fa74ffed)

Does this happen on latest builds?: https://builder.blender.org/download/daily

Try to append cube from this file

I have tried to append cube from Object and from Mesh folder and still not able to reproduce

  • {nav shape.blend > Object > Cube}
  • {nav shape.blend > Mesh > Cube}
Hi, thanks for the report. I am not able to reproduce this on current master and a little older builds (15405685d9a0, e6fa74ffed5f) Does this happen on latest builds?: https://builder.blender.org/download/daily > Try to append cube from this file I have tried to append cube from Object and from Mesh folder and still not able to reproduce - {nav shape.blend > Object > Cube} - {nav shape.blend > Mesh > Cube}
Author

Yes, even in latest builds (even with default factory settings). build blender-3.0.0-alpha+master.84dcf12ceb7f-windows.amd64-release
May be video will be more informative (i try to grab/scale keys in video)
test_1.mp4

Yes, even in latest builds (even with default factory settings). build blender-3.0.0-alpha+master.84dcf12ceb7f-windows.amd64-release May be video will be more informative (i try to grab/scale keys in video) [test_1.mp4](https://archive.blender.org/developer/F10689976/test_1.mp4)
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Hi, thanks for clarifying. Will search for the first bad commit

Hi, thanks for clarifying. Will search for the first bad commit
Member

Added subscriber: @mont29

Added subscriber: @mont29
Member

Caused by 3be5ce4aad

Hi @mont29 , can you please check this?

Caused by 3be5ce4aad Hi @mont29 , can you please check this?

Added subscriber: @Wovchick

Added subscriber: @Wovchick

This issue was referenced by 271210126e

This issue was referenced by 271210126e12713d70813937ddd4732993f7bb35

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Bastien Montagne self-assigned this 2021-10-01 14:49:16 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#91834
No description provided.