Fix T91834: Appending objects with shape keys into new file is broken.

Recent append refactor 'broke' this, we need special recursive care and
handling of those nasty shpae keys... again.